Added bulk of the implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 project(AUVSimulation)
 
 # Set C++ standard
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Include directories
@@ -12,9 +12,12 @@ include_directories(include)
 
 # Source files
 set(SOURCES
+    src/Altimeter.cpp
     src/AnalogPressureSensor.cpp
-    src/PressureSensor.cpp
-    src/PressureSensorConnection.cpp
+    src/AUV_Controller.cpp
+    src/DigitalPressureSensor.cpp
+    src/WaterDepthSimulation.cpp
+    src/main.cpp
 )
 
 # Executable target
