Finished implementation and cleanup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.10)
 project(AUVSimulation)
 
 # Set C++ standard
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Include directories
@@ -17,6 +17,7 @@ set(SOURCES
     src/AUV_Controller.cpp
     src/DigitalPressureSensor.cpp
     src/WaterDepthSimulation.cpp
+    src/MissionPlan.cpp
     src/main.cpp
 )
 
